fixed bug for background color not showing well without loaded content. Also made it look nicer by padding the bottom

--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -8,6 +8,8 @@
 .main-content {
   background-color: #FAFAFA;
   padding-top: 35px;
+  min-height: 100vh;
+  padding-bottom: 70px;
 }
 
 /* Search */
